# AI_task_assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_ai-task-assistant.yml
static/: index.html
